tests/dataset/tpc-ds/compiler/go/q1.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq180715970/001/main.go:613:2: syntax error: unexpected name ny after top level declaration
