tests/dataset/tpc-ds/compiler/go/q1.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 2025-07-15T12:00:45Z

package main

import (
	"encoding/json"
	"fmt"
	"mochi/runtime/data"
	"reflect"
	"sort"
	"time"

	"golang.org/x/exp/constraints"
)

type Customer struct {
	C_customer_sk int    `json:"c_customer_sk"`
	C_customer_id string `json:"c_customer_id"`
}

type Customer_total_return struct {
	Ctr_customer_sk  any     `json:"ctr_customer_sk"`
	Ctr_store_sk     any     `json:"ctr_store_sk"`
	Ctr_total_return float64 `json:"ctr_total_return"`
}

type Date_dim struct {
	D_date_sk int `json:"d_date_sk"`
	D_year    int `json:"d_year"`
}

type GKey struct {
	Customer_sk int `json:"customer_sk"`
	Store_sk    int `json:"store_sk"`
}

type Result struct {
	C_customer_id string `json:"c_customer_id"`
}

type Store struct {
	S_store_sk int    `json:"s_store_sk"`
	S_state    string `json:"s_state"`
}

type Store_return struct {
	Sr_returned_date_sk int     `json:"sr_returned_date_sk"`
	Sr_customer_sk      int     `json:"sr_customer_sk"`
	Sr_store_sk         int     `json:"sr_store_sk"`
	Sr_return_amt       float64 `json:"sr_return_amt"`
}

type v = Result

func expect(cond bool) {
	if !cond {
		panic("expect failed")
	}
}

func formatDuration(d time.Duration) string {
	switch {
	case d < time.Microsecond:
		return fmt.Sprintf("%dns", d.Nanoseconds())
	case d < time.Millisecond:
		return fmt.Sprintf("%.1fµs", float64(d.Microseconds()))
	case d < time.Second:
		return fmt.Sprintf("%.1fms", float64(d.Milliseconds()))
	default:
		return fmt.Sprintf("%.2fs", d.Seconds())
	}
}

func printTestStart(name string) {
	fmt.Printf("   test %-30s ...", name)
}

func printTestPass(d time.Duration) {
	fmt.Printf(" ok (%s)\n", formatDuration(d))
}

func printTestFail(err error, d time.Duration) {
	fmt.Printf(" fail %v (%s)\n", err, formatDuration(d))
}

func test_TPCDS_Q1_result() {
	expect(_equal(result, []v{v{C_customer_id: "C2"}}))
}

var store_returns []Store_return
var date_dim []Date_dim
var store []Store
var customer []Customer
var customer_total_return []Customer_total_return
var result []Result

func main() {
	store_returns = []Store_return{Store_return{
		Sr_returned_date_sk: 1,
		Sr_customer_sk:      1,
		Sr_store_sk:         10,
		Sr_return_amt:       20.0,
	}, Store_return{
		Sr_returned_date_sk: 1,
		Sr_customer_sk:      2,
		Sr_store_sk:         10,
		Sr_return_amt:       50.0,
	}}
	date_dim = []Date_dim{Date_dim{
		D_date_sk: 1,
		D_year:    1998,
	}}
	store = []Store{Store{
		S_store_sk: 10,
		S_state:    "TN",
	}}
	customer = []Customer{Customer{
		C_customer_sk: 1,
		C_customer_id: "C1",
	}, Customer{
		C_customer_sk: 2,
		C_customer_id: "C2",
	}}
	customer_total_return = func() []Customer_total_return {
		groups := map[string]*data.Group{}
		order := []string{}
		for _, sr := range store_returns {
			for _, d := range date_dim {
				if !((sr.Sr_returned_date_sk == d.D_date_sk) && (d.D_year == 1998)) {
					continue
				}
				key := GKey{
					Customer_sk: sr.Sr_customer_sk,
					Store_sk:    sr.Sr_store_sk,
				}
				ks := fmt.Sprint(key)
				g, ok := groups[ks]
				if !ok {
					g = &data.Group{Key: key}
					groups[ks] = g
					order = append(order, ks)
				}
				_item := map[string]any{}
				_item["sr_returned_date_sk"] = sr.Sr_returned_date_sk
				_item["sr_customer_sk"] = sr.Sr_customer_sk
				_item["sr_store_sk"] = sr.Sr_store_sk
				_item["sr_return_amt"] = sr.Sr_return_amt
				_item["sr"] = sr
				_item["d_date_sk"] = d.D_date_sk
				_item["d_year"] = d.D_year
				_item["d"] = d
				g.Items = append(g.Items, _item)
			}
		}
		items := []*data.Group{}
		for _, ks := range order {
			items = append(items, groups[ks])
		}
		results := []Customer_total_return{}
		for _, g := range items {
			results = append(results, Customer_total_return{
				Ctr_customer_sk: g.Key.(GKey).Customer_sk,
				Ctr_store_sk:    g.Key.(GKey).Store_sk,
				Ctr_total_return: _sumOrdered[float64](func() []float64 {
					results := []float64{}
					for _, x := range g.Items {
						results = append(results, x.Sr_return_amt)
					}
					return results
				}()),
			})
		}
		return results
	}()
	result = func() []Result {
		src := _toAnySlice(customer_total_return)
		resAny := _query(src, []_joinSpec{
			{items: _toAnySlice(store), on: func(_a ...any) bool {
				tmp0 := _a[0]
				var ctr1 Customer_total_return
				if tmp0 != nil {
					ctr1 = tmp0.(Customer_total_return)
				}
				_ = ctr1
				tmp1 := _a[1]
				var s Store
				if tmp1 != nil {
					s = tmp1.(Store)
				}
				_ = s
				return _equal(ctr1.Ctr_store_sk, s.S_store_sk)
			}, leftKey: func(_a ...any) any {
				tmp0 := _a[0]
				var ctr1 Customer_total_return
				if tmp0 != nil {
					ctr1 = tmp0.(Customer_total_return)
				}
				_ = ctr1
				return ctr1.Ctr_store_sk
			}, rightKey: func(_v any) any { s := _v.(Store); _ = s; return s.S_store_sk }},
			{items: _toAnySlice(customer), on: func(_a ...any) bool {
				tmp0 := _a[0]
				var ctr1 Customer_total_return
				if tmp0 != nil {
					ctr1 = tmp0.(Customer_total_return)
				}
				_ = ctr1
				tmp1 := _a[1]
				var s Store
				if tmp1 != nil {
					s = tmp1.(Store)
				}
				_ = s
				tmp2 := _a[2]
				var c Customer
				if tmp2 != nil {
					c = tmp2.(Customer)
				}
				_ = c
				return _equal(ctr1.Ctr_customer_sk, c.C_customer_sk)
			}, leftKey: func(_a ...any) any {
				tmp0 := _a[0]
				var ctr1 Customer_total_return
				if tmp0 != nil {
					ctr1 = tmp0.(Customer_total_return)
				}
				_ = ctr1
				tmp1 := _a[1]
				var s Store
				if tmp1 != nil {
					s = tmp1.(Store)
				}
				_ = s
				return ctr1.Ctr_customer_sk
			}, rightKey: func(_v any) any { c := _v.(Customer); _ = c; return c.C_customer_sk }},
		}, _queryOpts{selectFn: func(_a ...any) any {
			tmp0 := _a[0]
			var ctr1 Customer_total_return
			if tmp0 != nil {
				ctr1 = tmp0.(Customer_total_return)
			}
			_ = ctr1
			tmp1 := _a[1]
			var s Store
			if tmp1 != nil {
				s = tmp1.(Store)
			}
			_ = s
			tmp2 := _a[2]
			var c Customer
			if tmp2 != nil {
				c = tmp2.(Customer)
			}
			_ = c
			return Result{C_customer_id: c.C_customer_id}
		}, where: func(_a ...any) bool {
			tmp0 := _a[0]
			var ctr1 Customer_total_return
			if tmp0 != nil {
				ctr1 = tmp0.(Customer_total_return)
			}
			_ = ctr1
			tmp1 := _a[1]
			var s Store
			if tmp1 != nil {
				s = tmp1.(Store)
			}
			_ = s
			tmp2 := _a[2]
			var c Customer
			if tmp2 != nil {
				c = tmp2.(Customer)
			}
			_ = c
			return ((ctr1.Ctr_total_return > (_avgOrdered[float64](func() []float64 {
				results := []float64{}
				for _, ctr2 := range customer_total_return {
					if _equal(ctr1.Ctr_store_sk, ctr2.Ctr_store_sk) {
						if _equal(ctr1.Ctr_store_sk, ctr2.Ctr_store_sk) {
							results = append(results, ctr2.Ctr_total_return)
						}
					}
				}
				return results
			}()) * 1.2)) && (s.S_state == "TN"))
		}, sortKey: func(_a ...any) any {
			tmp0 := _a[0]
			var ctr1 Customer_total_return
			if tmp0 != nil {
				ctr1 = tmp0.(Customer_total_return)
			}
			_ = ctr1
			tmp1 := _a[1]
			var s Store
			if tmp1 != nil {
				s = tmp1.(Store)
			}
			_ = s
			tmp2 := _a[2]
			var c Customer
			if tmp2 != nil {
				c = tmp2.(Customer)
			}
			_ = c
			return c.C_customer_id
		}, skip: -1, take: -1})
		out := make([]Result, len(resAny))
		for i, v := range resAny {
			out[i] = v.(Result)
		}
		return out
	}()
	func() { b, _ := json.Marshal(result); fmt.Println(string(b)) }()
	test_TPCDS_Q1_result()
}

func _avgOrdered[T constraints.Integer | constraints.Float](s []T) float64 {
	if len(s) == 0 {
		return 0
	}
	var sum float64
	for _, v := range s {
		sum += float64(v)
	}
	return sum / float64(len(s))
}

func _equal(a, b any) bool {
	av := reflect.ValueOf(a)
	bv := reflect.ValueOf(b)
	if av.Kind() == reflect.Slice && bv.Kind() == reflect.Slice {
		if av.Len() != bv.Len() {
			return false
		}
		for i := 0; i < av.Len(); i++ {
			if !_equal(av.Index(i).Interface(), bv.Index(i).Interface()) {
				return false
			}
		}
		return true
	}
	if av.Kind() == reflect.Map && bv.Kind() == reflect.Map {
		if av.Len() != bv.Len() {
			return false
		}
		for _, k := range av.MapKeys() {
			bvVal := bv.MapIndex(k)
			if !bvVal.IsValid() {
				return false
			}
			if !_equal(av.MapIndex(k).Interface(), bvVal.Interface()) {
				return false
			}
		}
		return true
	}
	if (av.Kind() == reflect.Int || av.Kind() == reflect.Int64 || av.Kind() == reflect.Float64) &&
		(bv.Kind() == reflect.Int || bv.Kind() == reflect.Int64 || bv.Kind() == reflect.Float64) {
		return av.Convert(reflect.TypeOf(float64(0))).Float() == bv.Convert(reflect.TypeOf(float64(0))).Float()
	}
	return reflect.DeepEqual(a, b)
}

type _joinSpec struct {
	items    []any
	on       func(...any) bool
	leftKey  func(...any) any
	rightKey func(any) any
	left     bool
	right    bool
}
type _queryOpts struct {
	selectFn func(...any) any
	where    func(...any) bool
	sortKey  func(...any) any
	skip     int
	take     int
}

func _query(src []any, joins []_joinSpec, opts _queryOpts) []any {
	items := make([][]any, len(src))
	for i, v := range src {
		items[i] = []any{v}
	}
	for _, j := range joins {
		if j.leftKey != nil && j.rightKey != nil {
			if j.right && !j.left {
				lmap := map[string][]int{}
				for li, l := range items {
					key := fmt.Sprint(j.leftKey(l...))
					lmap[key] = append(lmap[key], li)
				}
				joined := [][]any{}
				for _, right := range j.items {
					key := fmt.Sprint(j.rightKey(right))
					if is, ok := lmap[key]; ok {
						for _, li := range is {
							left := items[li]
							keep := true
							if j.on != nil {
								args := append(append([]any(nil), left...), right)
								keep = j.on(args...)
							}
							if !keep {
								continue
							}
							joined = append(joined, append(append([]any(nil), left...), right))
						}
					} else {
						undef := make([]any, len(items[0]))
						joined = append(joined, append(undef, right))
					}
				}
				items = joined
				continue
			}
			rmap := map[string][]int{}
			for ri, r := range j.items {
				key := fmt.Sprint(j.rightKey(r))
				rmap[key] = append(rmap[key], ri)
			}
			joined := [][]any{}
			matched := make([]bool, len(j.items))
			for _, left := range items {
				key := fmt.Sprint(j.leftKey(left...))
				if is, ok := rmap[key]; ok {
					m := false
					for _, ri := range is {
						right := j.items[ri]
						keep := true
						if j.on != nil {
							args := append(append([]any(nil), left...), right)
							keep = j.on(args...)
						}
						if !keep {
							continue
						}
						m = true
						matched[ri] = true
						joined = append(joined, append(append([]any(nil), left...), right))
					}
					if j.left && !m {
						joined = append(joined, append(append([]any(nil), left...), nil))
					}
				} else if j.left {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			if j.right {
				lw := 0
				if len(items) > 0 {
					lw = len(items[0])
				}
				for ri, right := range j.items {
					if !matched[ri] {
						undef := make([]any, lw)
						joined = append(joined, append(undef, right))
					}
				}
			}
			items = joined
			continue
		}
		joined := [][]any{}
		if j.right && j.left {
			matched := make([]bool, len(j.items))
			for _, left := range items {
				m := false
				for ri, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					matched[ri] = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			for ri, right := range j.items {
				if !matched[ri] {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else if j.right {
			for _, right := range j.items {
				m := false
				for _, left := range items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else {
			for _, left := range items {
				m := false
				for _, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if j.left && !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
		}
		items = joined
	}
	if opts.where != nil {
		filtered := [][]any{}
		for _, r := range items {
			if opts.where(r...) {
				filtered = append(filtered, r)
			}
		}
		items = filtered
	}
	if opts.sortKey != nil {
		type pair struct {
			item []any
			key  any
		}
		pairs := make([]pair, len(items))
		for i, it := range items {
			pairs[i] = pair{it, opts.sortKey(it...)}
		}
		sort.Slice(pairs, func(i, j int) bool {
			a, b := pairs[i].key, pairs[j].key
			switch av := a.(type) {
			case int:
				switch bv := b.(type) {
				case int:
					return av < bv
				case float64:
					return float64(av) < bv
				}
			case float64:
				switch bv := b.(type) {
				case int:
					return av < float64(bv)
				case float64:
					return av < bv
				}
			case string:
				bs, _ := b.(string)
				return av < bs
			}
			return fmt.Sprint(a) < fmt.Sprint(b)
		})
		for i, p := range pairs {
			items[i] = p.item
		}
	}
	if opts.skip >= 0 {
		if opts.skip < len(items) {
			items = items[opts.skip:]
		} else {
			items = [][]any{}
		}
	}
	if opts.take >= 0 {
		if opts.take < len(items) {
			items = items[:opts.take]
		}
	}
	res := make([]any, len(items))
	for i, r := range items {
		res[i] = opts.selectFn(r...)
	}
	return res
}

func _sumOrdered[T constraints.Integer | constraints.Float](s []T) float64 {
	var sum float64
	for _, v := range s {
		sum += float64(v)
	}
	return sum
}

func _toAnySlice[T any](s []T) []any {
	out := make([]any, len(s))
	for i, v := range s {
		out[i] = v
	}
	return out
}
